書く予定のファイル追加 npm scripts追加

--- a/docs/package.json
+++ b/docs/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+  	"start": "gitbook serve",
+  	"export": "gitbook build ./ docs/"
+  },
   "devDependencies": {
     "gitbook-cli": "^2.3.2"
   }
